--- a/.github/workflows/prepare_images_for_html.yml
+++ b/.github/workflows/prepare_images_for_html.yml
@@ -33,20 +33,21 @@ jobs:
           for branch in "${branches[@]}"; do
             echo "Processing branch: $branch"
             git fetch origin $branch
-            git checkout $branch -- .research/
+            git checkout origin/$branch -- .research/
 
             latest=$(ls .research | grep '^iteration[0-9]\+$' | sed 's/iteration//' | sort -n | tail -n1)
             img_dir=".research/iteration${latest}/images"
 
             if [ -d "$img_dir" ]; then
               for pdf in "$img_dir"/*.pdf; do
+                [ -e "$pdf" ] || continue
                 name=$(basename "$pdf" .pdf)
                 pdftoppm "$pdf" "output_images/${branch}_${name}" -png
               done
             else
               echo "No images found in $branch"
             fi
-            
+
             echo "Cleaning up .research directory..."
             rm -rf .research
           done
