--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -45,17 +45,21 @@ jobs:
 
           for branch in "${branches[@]}"; do
             echo "Processing branch: $branch"
+
+            tmp_dir="$(mktemp -d)"
             git fetch origin $branch
-            git checkout origin/$branch -- .research/
+            git --work-tree="$tmp_dir" checkout origin/$branch -- .research/ || true
 
-            latest=$(ls .research | grep '^iteration[0-9]\+$' | sed 's/iteration//' | sort -n | tail -n1)
+            latest=$(ls "$tmp_dir/.research" | grep '^iteration[0-9]\+$' | sed 's/iteration//' | sort -n | tail -n1)
+            if [ -n "$latest" ]; then
+              src_dir="$tmp_dir/.research/iteration${latest}/images"
+              echo "Copying from $src_dir to $dest_dir"
+              cp -r "$src_dir"/* "$dest_dir" || echo "No images to copy"
+            else
+              echo "No iteration directories found in $branch"
+            fi
 
-            src_dir=".research/iteration${latest}/images"
-            echo "Copying from $src_dir to $dest_dir"
-            cp -r "$src_dir"/* "$dest_dir" || echo "No images to copy"
-
-            echo "Cleaning up .research directory..."
-            rm -rf .research
+            rm -rf "$tmp_dir"
           done
 
       - name: Compile paper.tex and capture errors
